--- a/pagina1/especieVampiro.html
+++ b/pagina1/especieVampiro.html
@@ -45,15 +45,19 @@
                     É como nada que já senti antes. Foi fantástico. E tudo o que posso pensar agora é ... Eu quero fazer
                     novamente. </p>
                 <p class="citacaoAutor"> <b> - Camille sobre se tornar uma Vampira </b></p>
+                
+                <p class="descricaoEspecie">Vampiros são cadáveres humanos magicamente reanimados que são habitados
+                    pelos espíritos da pessoa
+                    falecida e
+                    que se parecem muito com o ser vivo que eram antes da sua transformação. Os vampiros se alimentam e
+                    sobrevivem do sangue dos vivos, tipicamente sobre o dos humanos, e também podem transformar outros
+                    seres
+                    humanos em outros vampiros, compartilhando seu próprio sangue com eles. Vampiros são uma das muitas
+                    espécies
+                    sobrenaturais conhecidas em The Vampire Diaries e The Originals, que foram criadas por bruxas.</p>
             </div>
 
-            <p class="descricaoEspecie">Vampiros são cadáveres humanos magicamente reanimados que são habitados pelos espíritos da pessoa
-                falecida e
-                que se parecem muito com o ser vivo que eram antes da sua transformação. Os vampiros se alimentam e
-                sobrevivem do sangue dos vivos, tipicamente sobre o dos humanos, e também podem transformar outros seres
-                humanos em outros vampiros, compartilhando seu próprio sangue com eles. Vampiros são uma das muitas
-                espécies
-                sobrenaturais conhecidas em The Vampire Diaries e The Originals, que foram criadas por bruxas.</p>
+
 
         </div>
 
