--- a/pagina1/especieVampiro.html
+++ b/pagina1/especieVampiro.html
@@ -45,7 +45,7 @@
                     É como nada que já senti antes. Foi fantástico. E tudo o que posso pensar agora é ... Eu quero fazer
                     novamente. </p>
                 <p class="citacaoAutor"> <b> - Camille sobre se tornar uma Vampira </b></p>
-                
+
                 <p class="descricaoEspecie">Vampiros são cadáveres humanos magicamente reanimados que são habitados
                     pelos espíritos da pessoa
                     falecida e
@@ -56,26 +56,24 @@
                     espécies
                     sobrenaturais conhecidas em The Vampire Diaries e The Originals, que foram criadas por bruxas.</p>
             </div>
-
-
-
         </div>
 
+        <div class="segundaSessao"> 
+        <h1>Verbena</h1>
         <div class="segundaCaixa">
+            <div class="conteudo">
+                <img class="fotoVerbena" src="verbena.png">
+                <p class="descricao2" > Verbena é uma erva potente e a fraqueza mais conhecida de um vampiro. Qualquer contato físico com
+                    Verbena queima os vampiros, tornando-os fracos e febris. Isso afeta também os híbridos de vampiro. Se os
+                    humanos ingerem ou mantêm Verbena consigo, ficam protegidos contra o controle mental vampírico e mantêm seu
+                    livre arbítrio.</p>
+                </div>
+            </div>
 
-            <h1>Verbena</h1>
-            <img class="fotoVerbena" src="verbena.png">
-            <!-- <p> Verbena é uma erva potente e a fraqueza mais conhecida de um vampiro. Qualquer contato físico com
-                Verbena
-                queima os vampiros, tornando-os fracos e febris. Isso afeta também os híbridos de vampiro. Se os humanos
-                ingerem ou mantêm Verbena consigo, ficam protegidos contra o controle mental vampírico e mantêm seu
-                livre arbítrio.</p> -->
-        </div>
-
-        <div class="terceiraCaixa">
-            <h1>ANÉIS DA LUZ DO DIA</h1>
-            <img class="fotoAnel" src="anelLuz.png">
-            <!-- <p>São joias encantadas por bruxas, geralmente contendo uma pedra preciosa de lápis-lazúli. Eles desempenham
+            <div class="terceiraCaixa">
+               
+                <img class="fotoAnel" src="anelLuz.png">
+                <!-- <p>São joias encantadas por bruxas, geralmente contendo uma pedra preciosa de lápis-lazúli. Eles desempenham
                 um
                 papel fundamental na proteção dos vampiros contra a luz solar, permitindo-lhes a liberdade de se mover
                 durante o dia. Paralelamente, os lobisomens possuem os Amuletos do Luar como seus equivalentes, que
@@ -85,7 +83,8 @@
                 costumam usar acessórios com lápis-lazúli, como pulseiras, colares ou anéis, enquanto os vampiros
                 masculinos
                 geralmente optam apenas por anéis.
-            </p> -->
+             </p> -->
+            </div>
         </div>
 
         <div class="quartaCaixa">
@@ -96,3 +95,4 @@
         </div>
     </div>
     </div>
+</div>
