--- a/pagina1/especieVampiro.html
+++ b/pagina1/especieVampiro.html
@@ -58,22 +58,27 @@
             </div>
         </div>
 
-        <div class="segundaSessao"> 
-        <h1>Verbena</h1>
-        <div class="segundaCaixa">
-            <div class="conteudo">
-                <img class="fotoVerbena" src="verbena.png">
-                <p class="descricao2" > Verbena é uma erva potente e a fraqueza mais conhecida de um vampiro. Qualquer contato físico com
-                    Verbena queima os vampiros, tornando-os fracos e febris. Isso afeta também os híbridos de vampiro. Se os
-                    humanos ingerem ou mantêm Verbena consigo, ficam protegidos contra o controle mental vampírico e mantêm seu
-                    livre arbítrio.</p>
+        <div class="segundaSessao">
+            <div class="segundaCaixa">
+                <h1>Verbena</h1>
+                <div class="conteudo">
+                    <img class="fotoVerbena" src="verbena.png">
+                    <p class="descricao2"> Verbena é uma erva potente e a fraqueza mais conhecida de um vampiro.
+                        Qualquer contato físico com
+                        Verbena queima os vampiros, tornando-os fracos e febris. Isso afeta também os híbridos de
+                        vampiro. Se os
+                        humanos ingerem ou mantêm Verbena consigo, ficam protegidos contra o controle mental vampírico e
+                        mantêm seu
+                        livre arbítrio.</p>
                 </div>
             </div>
 
             <div class="terceiraCaixa">
-               
-                <img class="fotoAnel" src="anelLuz.png">
-                <!-- <p>São joias encantadas por bruxas, geralmente contendo uma pedra preciosa de lápis-lazúli. Eles desempenham
+                <h1>ANEL DA LUZ</h1>
+                <div class="conteudo">
+
+                    <img class="fotoAnel" src="anelLuz.png">
+                    <!-- <p>São joias encantadas por bruxas, geralmente contendo uma pedra preciosa de lápis-lazúli. Eles desempenham
                 um
                 papel fundamental na proteção dos vampiros contra a luz solar, permitindo-lhes a liberdade de se mover
                 durante o dia. Paralelamente, os lobisomens possuem os Amuletos do Luar como seus equivalentes, que
@@ -84,15 +89,16 @@
                 masculinos
                 geralmente optam apenas por anéis.
              </p> -->
+                </div>
             </div>
         </div>
-
+<!-- 
         <div class="quartaCaixa">
             <h1> PODERES E HABILIDADES</h1>
         </div>
         <div class="quintaCaixa">
             <h1> FRAQUEZAS</h1>
-        </div>
+        </div> -->
     </div>
     </div>
-</div>
+    </div>
