encorpei a sidebar lateral, coloquei dois botões e alinhei os elementos

--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -11,22 +11,40 @@
 <body>
 
     <div class="sidebar">
-        <div class="boxMarrom">
-            <div class="boxImagem">
+        <div class="sidebarMarrom">
+            <div class="sidebar-header">
                 <img class="imagemPerfil" src="fotoPerfil.png">
+                <p>Olá, Amanda!</p>
             </div>
-            <h3>Olá, Amanda!</h3>
         </div>
 
-        <div>
-            <p> Métricas </p>
-            <p> Quiz </p>
+        <div class="navegacao" >
+            <button>
+                <span>
+                    <img src="simboloMetrica.png">
+                    <span> Métricas </span>
+                </span>
+            </button>
+
+            <button>
+                <span>
+                    <img src="quiz.png">
+                    <spn> Quiz </span>
+                </span>
+            </button>
         </div>
+
+
+
     </div>
 
     <div class="conteudo">
-        <p></p>
+        <p>lorem</p>
 
-    </div>
+    </div> 
+
+
+
+</body>
 
 </html>
