arrumei a imagem da onda da tela principal e adicionei outro estilo de hover nos valores e nos personagens

--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diários de Mystic Falls</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="slider.css">
+    <link rel="stylesheet" href="style.css">  
     <script src="script.js"></script>
-
-
-
 </head>
 
 
@@ -27,7 +23,7 @@
                 <li><a href="###">PERSONAGENS</a></li>
                 <li><a href="####">SOBRE MIM</a></li>
                 <li class="login-link">
-                    <div class="frame-login"><a href="#####">LOGIN</a></div>
+                    <div class="frame-login"><a href="#####">ACESSAR</a></div>
                 </li>
             </ul>
         </div>
@@ -64,7 +60,7 @@
     </div>
 
     <div class="ondaPagina">
-        <img src="imagens-serie/MARROM.png">
+        <img src="MARROM1.png">
         <p> Se você tem ideias, pensamentos <br> e histórias para compartilhar, <br> inscreva-se e crie um espaço
             pessoal <br> para suas palavras. <br> Sua criatividade é bem-vinda!</p>
     </div>
@@ -185,7 +181,7 @@
         <p class="subtituloSessao"> Navegue e descubra um pouco mais sobre os principais personagens da série
         </p>
         <br>
-        <div class="flexbox">
+        <div class="boxPersonagens">
             <div class="personagens">
                 <img class="tamanhoPers" class="elipse" src="imagens-serie/stefan.png">
             </div>
@@ -216,7 +212,7 @@
         </div>
         <br>
 
-        <div class="flexbox1">
+        <div class="containerSobrePersonagem">
             <div class="caixaDireita2">
                 <h6 class="TituloSessaoPersonagem">DAMON SALVATORE</h6>
                 <div class="caixaCitacao">
@@ -353,7 +349,7 @@
         <div class="footer">
             <p> Copyright 2023 - Todos os Direitos Reservados </p>
         </div>
-        
+
 </body>
 
 </html>
