--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -29,17 +29,22 @@
             <button>
                 <span>
                     <img src="quiz.png">
-                    <spn> Quiz </span>
+                    <span> Quiz </span>
                 </span>
-            </button>
+            </button> 
+
+            <div>
+                <span></span>
+            </div>
         </div>
-
-
 
     </div>
 
-    <div class="conteudo">
-        <p>lorem</p>
+    <main class="main">
+        <h1> Bem vindos ao site </h1>
+
+    </main>
+        
 
     </div> 
 
