adicionei uma div fixa na pagina com cor e mensagem  principal

--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div class="navegacao" >
+        <div class="navegacao">
             <button>
                 <span>
                     <img src="simboloMetrica.png">
@@ -31,7 +31,7 @@
                     <img src="quiz.png">
                     <span> Quiz </span>
                 </span>
-            </button> 
+            </button>
 
             <div>
                 <span></span>
@@ -41,12 +41,17 @@
     </div>
 
     <main class="main">
-        <h1> Bem vindos ao site </h1>
 
-    </main>
+        <div class="barraBoasVindas">
+            <div class="boxTexto">
+                <span> MEU DIÁRIO ONLINE </span>
+            </div>
+        </div>
         
+    </main>
 
-    </div> 
+
+    </div>
 
 
 
