criei a coluna de nova entrada no diário, comecei a estilização

--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -47,7 +47,29 @@
                 <span> MEU DIÁRIO ONLINE </span>
             </div>
         </div>
-        
+
+        <div class="BoxNovaEntrada">
+            <div class="caixaNovaEntrada">
+                <div class="boxTituloNovaEntrada">
+                    <span> NOVA ENTRADA</span>
+                </div>
+
+
+                <div>
+                    <div class="tituloDiario">
+                        <span>Insira um título:</span> <br>
+                        <input class="" id="input_tituloDiario">
+                    </div>
+
+                    <div class="caixaConteudo">                        
+                            <label for="conteudoDiario">Escreva aqui seus pensamentos:</label>
+                            <textarea id="conteudoDiario" name="conteudoDiario" rows="12" cols="60"
+                                style="resize: both;"></textarea>
+                       
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 
