adicionei a coluna de diários antigos, iniciei a estilizacao e apliquei !important na textarea da nova entrada para impedir que o usuário consiga redimensionar

--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -61,14 +61,27 @@
                         <input class="" id="input_tituloDiario">
                     </div>
 
-                    <div class="caixaConteudo">                        
-                            <label for="conteudoDiario">Escreva aqui seus pensamentos:</label>
-                            <textarea id="conteudoDiario" name="conteudoDiario" rows="12" cols="60"
-                                style="resize: both;"></textarea>
-                       
+                    <div class="caixaConteudo">
+                        <label for="conteudoDiario">Escreva aqui seus pensamentos:</label>
+                        <textarea id="conteudoDiario" name="conteudoDiario" rows="12" cols="60"
+                            style="resize: both;"></textarea>
+
+                    </div>
+
+                    <div class="botaoSalvar">
+                        <span>SALVAR</span>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="boxDiariosAntigos">
+            <div class="caixaDiariosAntigos">
+                <div class="boxTituloNovaEntrada">
+                    <span> DIÁRIOS ANTIGOS</span>
+                </div>
+            </div>
+
         </div>
     </main>
 
