adicionei o corpo da busca e calendario que ficará a direita

--- a/pagina2/index.html
+++ b/pagina2/index.html
@@ -81,6 +81,17 @@
                     <span> DIÁRIOS ANTIGOS</span>
                 </div>
             </div>
+        </div>
+
+        <div class="boxBuscar">
+            <div class="caixaBuscar">
+                <span> BUSCA </span> <br>
+                <input id="input_buscar">
+            </div>
+        </div>
+
+        <div class="calendarioBox">
+            <span> CALENDÁRIO </span>
 
         </div>
     </main>
