--- a/PaginaDiario/index.html
+++ b/PaginaDiario/index.html
@@ -13,7 +13,7 @@
     <div class="sidebar">
         <div class="sidebarMarrom">
             <div class="sidebar-header">
-                <img class="imagemPerfil" src="fotoPerfil.png">
+                <img class="imagemPerfil" src="Imagens/fotoPerfil.png">
                 <p>Olá, Amanda!</p>
             </div>
         </div>
@@ -21,15 +21,15 @@
         <div class="navegacao">
             <button>
                 <span>
-                    <img src="simboloMetrica.png">
-                    <span> Métricas </span>
+                    <img src="Imagens/simboloMetrica.png">
+                    <span onclick="telaMetricas()"> Métricas </span>
                 </span>
             </button>
 
             <button>
                 <span>
-                    <img src="quiz.png">
-                    <span> Quiz </span>
+                    <img src="Imagens/quiz.png">
+                    <span onclick="telaQuiz()"> Quiz </span>
                 </span>
             </button>
 
@@ -98,13 +98,17 @@
         <br><br><br>
 
     </main>
-
-
     </div>
-
-
 
 </body>
 
+<script>
+     function telaMetricas() {
+    window.location.href = "../Dashboard/index.html"}
 
+    function telaQuiz() {
+    window.location.href = "../Quiz/index.html"
+}   
+
+</script>
 </html>
