--- a/PaginaDiario/index.html
+++ b/PaginaDiario/index.html
@@ -33,9 +33,19 @@
                 </span>
             </button>
 
-            <div>
-                <span></span>
+            <button>
+                <span>
+                    <img src="Imagens/diario.png">
+                    <span onclick=""> Diário </span>
+                </span>
+            </button>
+
+            <div class="deslogar">
+                <span>                    
+                    <span onclick="telaSair()">SAIR</span>
+                </span>
             </div>
+          
         </div>
 
     </div>
@@ -107,8 +117,11 @@
     window.location.href = "../Dashboard/index.html"}
 
     function telaQuiz() {
-    window.location.href = "../Quiz/index.html"
-}   
+    window.location.href = "../Quiz/index.html"    }
+
+    function telaSair() {
+    window.location.href = "../PaginaInicial/index.html"    }
+  
 
 </script>
 </html>
