--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -32,7 +32,19 @@
                     <span> Quiz </span>
                 </span>
             </button>
-           
+
+            <button>
+                <span>
+                    <img src="Imagens/diario.png">
+                    <span onclick="telaDiario()"> Diário </span>
+                </span>
+            </button>
+
+            <div class="deslogar">
+                <span>
+                    <span onclick="telaSair()">SAIR</span>
+                </span>
+            </div>
         </div>
 
     </div>
@@ -52,7 +64,7 @@
                 </div>
 
                 <div class="TituloQuiz ">
-                    <span> Qual espécie você seria em The Vampire Diaries?
+                    <span> Pronto para mostrar que é um verdadeiro fã de 'The Vampire Diaries'? Teste seus conhecimentos gerais e descubra se você é um especialista na saga de Mystic Falls!
                     </span>
                     <div class="boxImagemQuiz">
                         <img class="imagemQuiz" src="Imagens/01.jpg">
@@ -85,8 +97,17 @@
 
 <script>
     function telaDashboard() {
-     window.location.href = "../Dashboard/index.html"
-                 
+        window.location.href = "../Dashboard/index.html"
+
+    }
+
+    function telaSair() {
+        window.location.href = "../PaginaInicial/index.html"
+    }
+
+    function telaDiario() {
+        window.location.href = "../PaginaDiario/index.html"
     }
 </script>
+
 </html>
