adicionei as citacoes de cada personagem no vetor

--- a/PaginaInicial/index.html
+++ b/PaginaInicial/index.html
@@ -192,7 +192,7 @@
             </div>
 
             <div class="personagens">
-                <img id="elena" onclick="mudarInformacoes('elena')" class="tamanhoPers" src="Imagens/elenaPersonagem.png">
+                <img id="elena" onclick="mudarInformacoes('ELENA GILBERT')" class="tamanhoPers" src="Imagens/elenaPersonagem.png">
             </div>
 
             <div class="personagens">
