criei o vetor de informações dos personagens

--- a/PaginaInicial/index.html
+++ b/PaginaInicial/index.html
@@ -188,30 +188,30 @@
         <br>
         <div class="boxPersonagens">
             <div class="personagens">
-                <img id="stefan" onclick="mudarInformacoes('STEFAN SALVATORE')" class="tamanhoPers" class="elipse" src="Imagens/stefan.png">
+                <img onclick="mudarInformacoes('STEFAN SALVATORE')" class="tamanhoPers" class="elipse" src="Imagens/stefan.png">
             </div>
 
             <div class="personagens">
-                <img id="elena" onclick="mudarInformacoes('ELENA GILBERT')" class="tamanhoPers" src="Imagens/elenaPersonagem.png">
+                <img onclick="mudarInformacoes('ELENA GILBERT')" class="tamanhoPers" src="Imagens/elenaPersonagem.png">
             </div>
 
             <div class="personagens">
-                <img class="tamanhoPers" src="Imagens/damon.png">
+                <img onclick="mudarInformacoes('DAMON SALVATORE')" class="tamanhoPers" src="Imagens/damon.png">
             </div>
 
             <div class="personagens">
-                <img class="tamanhoPers" src="Imagens/caroline.png">
+                <img onclick="mudarInformacoes('CAROLINE FORBES')" class="tamanhoPers" src="Imagens/caroline.png">
             </div>
 
             <div class="personagens">
-                <img class="tamanhoPers" src="Imagens/bonnie.png">
+                <img onclick="mudarInformacoes('BONNIE BENNET')" class="tamanhoPers" src="Imagens/bonnie.png">
             </div>
 
             <div class="personagens">
-                <img class="tamanhoPers" src="Imagens/matt.png">
+                <img onclick="mudarInformacoes('MATT DONOVAN')" class="tamanhoPers" src="Imagens/matt.png">
             </div>
             <div class="personagens">
-                <img class="tamanhoPers" src="Imagens/tyler.png">
+                <img onclick="mudarInformacoes('TYLER LOCKWOOD')" class="tamanhoPers" src="Imagens/tyler.png">
             </div>
 
         </div>
