terminei a parte lógica da sessao de personagens

--- a/PaginaInicial/index.html
+++ b/PaginaInicial/index.html
@@ -204,7 +204,7 @@
             </div>
 
             <div class="personagens">
-                <img onclick="mudarInformacoes('BONNIE BENNET')" class="tamanhoPers" src="Imagens/bonnie.png">
+                <img onclick="mudarInformacoes('BONNIE BENNETT')" class="tamanhoPers" src="Imagens/bonnie.png">
             </div>
 
             <div class="personagens">
@@ -257,7 +257,7 @@
                     <div class="linhas">
                         <div class="info">
                             <div class="esquerda">Nascimento:</div>
-                            <div class="direita">12 de abril de 1990</div>
+                            <div class="direita">18 de Junho, 1839 </div>
                         </div>
                     </div>
                     <div class="divisor"></div>
@@ -265,7 +265,7 @@
                     <div class="linhas"></div>
                     <div class="info">
                         <div class="esquerda">Transformado por:</div>
-                        <div class="direita">Por Katherine Pierce, em 25 de Setembro, 1864</div>
+                        <div class="direita">Katherine Pierce em 25 de Setembro, 1864</div>
                     </div>
                     <div class="divisor"></div>
 
