adicionei o texto sobre mim na pagina inicial

--- a/PaginaInicial/index.html
+++ b/PaginaInicial/index.html
@@ -323,27 +323,12 @@
 
         <div class="boxSobreMim">
             <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                unknown
-                printer took a galley of type and scrambled it to make a type specimen book. It has
-                survived not only five enturies, but also the leap into electronic typesetting,
-                remaining essentially unchanged .Lorem Ipsum is simply dummy text of the printing
-                and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                to make a type specimen book. It has survived not only five centuries, but also the
-                leap into electronic typesetting, remaining essentially unchanged.<br><br>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                unknown
-                printer took a galley of type and scrambled it to make a type specimen book. It has
-                survived not only five enturies, but also the leap into electronic typesetting,
-                remaining essentially unchanged .Lorem Ipsum is simply dummy text of the printing
-                and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
-                ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                to make a type specimen book. It has survived not only five centuries, but also the
-                leap into electronic typesetting, remaining essentially unchanged.
-            </p>
+               Amanda Geovanna, 22 anos de idade, sou apaixonada por gatos, livros de ficção e de autoconhecimento. Gosto de jogar jogos de mundo aberto nas horas vagas e de desbravar a cidade de São Paulo, conhecendo lugares novos para experimentar comidas diferentes e tirar fotos, pois adoro registrar momentos! Por ser muito nostálgica, gosto de revisitar as fotos novamente após um tempo. <br> <br>
+
+                Estou em formação para me tornar uma desenvolvedora de sistemas, sendo que a área que mais me identifico é a de front-end.  Minha afinidade com o design e a oportunidade de explorar minha criatividade são os elementos que mais me atraem nessa área. Na época escolar, era frequentemente questionada por meus professores sobre a possibilidade de seguir uma carreira artística, já que meus cartazes chamavam bastante atenção pelo aspecto estético. Movida pelo desejo de ajudar as pessoas, acabei caindo de paraquedas no curso de Enfermagem, no entanto, não me identifiquei, pois sentia que estava sendo limitada. Descobri então que poderia ajudar as pessoas de outra maneira, colocando em prática minha personalidade e interesses: tecnologia, curiosidade e a parte artistica. <br> <br>
+
+                The Vampire Diaries é um marco em minha vida. Acompanhei a série dos 10 aos 17 anos e fui inspirada pelos personagens a começar a prática de escrever em um diário, hábito que mantenho até hoje. Essa atitude me ajudou a longo prazo a despertar a curiosidade que tenho em autoconhecimento, a compreender mais a mim mesma e a lidar melhor com as pessoas ao meu redor.  <br> <br> 
+                </p>
 
             <div class="fotoSobreMim">
                 <img class="imagem" src="Imagens/Amanda.png">
