--- a/PaginaInicial/index.html
+++ b/PaginaInicial/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diários de Mystic Falls</title>
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="dashboard.css">    
     <!-- <script src="https://www.youtube.com/iframe_api"></script> -->
     <script src="https://player.vimeo.com/api/player.js"></script>
-    <script src="script.js"></script>
+    <script src="dashboard.js"></script>
     <style>
         
     </style>
@@ -323,11 +323,11 @@
 
         <div class="boxSobreMim">
             <p>
-               Amanda Geovanna, 22 anos de idade, sou apaixonada por gatos, livros de ficção e de autoconhecimento. Gosto de jogar jogos de mundo aberto nas horas vagas e de desbravar a cidade de São Paulo, conhecendo lugares novos para experimentar comidas diferentes e tirar fotos, pois adoro registrar momentos! Por ser muito nostálgica, gosto de revisitar as fotos novamente após um tempo. <br> <br>
+                <b>Amanda Geovanna, 22 anos de idade, sou apaixonada por gatos, livros de ficção e de autoconhecimento.</b> Gosto de jogar jogos de mundo aberto nas horas vagas e de <b>desbravar a cidade de São Paulo</b>, conhecendo lugares novos para experimentar comidas diferentes e tirar fotos, <b>pois adoro registrar momentos!</b> Por ser muito nostálgica, gosto de revisitar as fotos novamente após um tempo. <br> <br>
 
-                Estou em formação para me tornar uma desenvolvedora de sistemas, sendo que a área que mais me identifico é a de front-end.  Minha afinidade com o design e a oportunidade de explorar minha criatividade são os elementos que mais me atraem nessa área. Na época escolar, era frequentemente questionada por meus professores sobre a possibilidade de seguir uma carreira artística, já que meus cartazes chamavam bastante atenção pelo aspecto estético. Movida pelo desejo de ajudar as pessoas, acabei caindo de paraquedas no curso de Enfermagem, no entanto, não me identifiquei, pois sentia que estava sendo limitada. Descobri então que poderia ajudar as pessoas de outra maneira, colocando em prática minha personalidade e interesses: tecnologia, curiosidade e a parte artistica. <br> <br>
+               <b>Estou em formação para me tornar uma desenvolvedora de sistemas</b>, sendo que a área que mais me identifico é a de <b>front-end</b>.  Minha afinidade com o design e a oportunidade de explorar minha criatividade são os elementos que mais me atraem nessa área. Na época escolar, era frequentemente questionada por meus professores sobre a possibilidade de seguir uma carreira artística, já que meus cartazes chamavam bastante atenção pelo aspecto estético. Movida pelo desejo de ajudar as pessoas, acabei caindo de paraquedas no curso de Enfermagem, no entanto, não me identifiquei, pois sentia que estava sendo limitada. <b>Descobri então que poderia ajudar as pessoas de outra maneira, colocando em prática minha personalidade e interesses: tecnologia, curiosidade e a parte artistica.</b> <br> <br>
 
-                The Vampire Diaries é um marco em minha vida. Acompanhei a série dos 10 aos 17 anos e fui inspirada pelos personagens a começar a prática de escrever em um diário, hábito que mantenho até hoje. Essa atitude me ajudou a longo prazo a despertar a curiosidade que tenho em autoconhecimento, a compreender mais a mim mesma e a lidar melhor com as pessoas ao meu redor.  <br> <br> 
+               <b> "The Vampire Diaries" </b> é um marco em minha vida. Acompanhei a série dos 10 aos 17 anos e fui inspirada pelos personagens a começar a prática de escrever em um diário, hábito que mantenho até hoje. <b>Essa atitude me ajudou a longo prazo a despertar a curiosidade que tenho em autoconhecimento, a compreender mais a mim mesma e a lidar melhor com as pessoas ao meu redor.</b>  <br> <br> 
                 </p>
 
             <div class="fotoSobreMim">
